--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "aegis",
-  "version": "1.3.3",
+  "version": "1.3.5",
   "repository": {
     "type": "git",
-    "url": "git://github.com/playlyfe/aegis.git"
+    "url": "git://github.com/officina/aegis.git"
   }
 }
