--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Aegis",
-  "version": "1.3.3",
+  "version": "1.3.5",
   "description": "Aegis CSS Framework",
   "devDependencies": {
     "coffee-script": "^1.8.0",
@@ -25,13 +25,13 @@
     "name": "Kumar Harsh",
     "email": "khs@playlyfe.com"
   },
-  "homepage": "http://github.com/playlyfe/aegis",
+  "homepage": "http://github.com/officina/aegis",
   "repository": {
     "type": "git",
-    "url": "http://github.com/playlyfe/aegis"
+    "url": "http://github.com/officina/aegis"
   },
   "bugs": {
-    "url": "http://github.com/playlyfe/aegis/issues"
+    "url": "http://github.com/officina/aegis/issues"
   },
   "license": "MIT"
 }
